--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -2,12 +2,9 @@
 
 ; 设置规则标志位
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Lan/Lan.list
-; ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=GoogleFCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/SteamCN/SteamCN.list
-; ruleset=微软copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
-; ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Telegram/Telegram.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
@@ -17,10 +14,10 @@ ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=youtobe,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/YouTube/YouTube.list
 ruleset=netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
-ruleset=国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMedia/ChinaMedia.list
+; ruleset=国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMedia/ChinaMedia.list
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GlobalMedia/GlobalMedia.list
-ruleset=最低延迟,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Proxy/Proxy.list
-; ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=默认选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Proxy/Proxy.list
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Cloud/CloudCN/CloudCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Download/Download.list
@@ -29,29 +26,25 @@ ruleset=漏网之鱼,[]FINAL
 ; 设置规则标志位
 
 ; 设置分组标志位
-; custom_proxy_group=节点选择`select`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]DIRECT
-; custom_proxy_group=手动切换`select`.*
-custom_proxy_group=最低延迟`url-test`[]香港`[]新加坡`[]日本`http://www.gstatic.com/generate_204`300
-custom_proxy_group=AI`select`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
-custom_proxy_group=tiktok`select`[]最低延迟`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
-custom_proxy_group=telegram`select`[]最低延迟`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
-custom_proxy_group=youtobe`select`[]最低延迟`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
-custom_proxy_group=netflix`select`[]netflix自选`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
-custom_proxy_group=国外媒体`select`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]DIRECT
-custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本
-; custom_proxy_group=微软copilot`select`[]DIRECT`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国
-; custom_proxy_group=OneDrive`select`[]DIRECT`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国
+custom_proxy_group=默认选择`fallback`[]香港`[]新加坡`[]日本`https://www.gstatic.com/generate_204`60`lazy
+custom_proxy_group=AI`select`[]默认选择`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=tiktok`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=telegram`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=youtobe`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=netflix`select`[]netflix自选`[]默认选择`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=国外媒体`select`[]默认选择`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]DIRECT
+; custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本
 custom_proxy_group=GoogleFCM`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
 custom_proxy_group=微软服务`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
 custom_proxy_group=游戏平台`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
-custom_proxy_group=漏网之鱼`select`[]最低延迟`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
-custom_proxy_group=香港`url-test`(?i)(?=.*1x)(?!.*0\.1x)(港|HK|Hong Kong|hongkong)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=日本`url-test`(?i)(?=.*1x)(?!.*0\.1x)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=美国`url-test`(?i)(?=.*1x)(?!.*0\.1x)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=台湾`url-test`(?i)(?=.*1x)(?!.*0\.1x)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=新加坡`url-test`(?i)(?=.*1x)(?!.*0\.1x)(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=韩国`url-test`(?i)(?=.*1x)(?!.*0\.1x)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=netflix自选`select`(?i)(NF|奈飞|解锁|Netflix)
+custom_proxy_group=漏网之鱼`select`[]默认选择`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
+custom_proxy_group=香港`fallback`(?i)(?=.*1x)(?!.*0\.1x)(港|HK|Hong Kong|hongkong)`https://www.gstatic.com/generate_204`60`lazy
+custom_proxy_group=日本`fallback`(?i)(?=.*1x)(?!.*0\.1x)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`https://www.gstatic.com/generate_204`60`lazy
+custom_proxy_group=美国`fallback`(?i)(?=.*1x)(?!.*0\.1x)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`https://www.gstatic.com/generate_204`60`lazy
+custom_proxy_group=台湾`fallback`(?i)(?=.*1x)(?!.*0\.1x)(台|新北|彰化|TW|Taiwan)`https://www.gstatic.com/generate_204`60`lazy
+custom_proxy_group=新加坡`fallback`(?i)(?=.*1x)(?!.*0\.1x)(新加坡|狮城|SG|Singapore)`https://www.gstatic.com/generate_204`60`lazy
+custom_proxy_group=韩国`fallback`(?i)(?=.*1x)(?!.*0\.1x)(KR|Korea|KOR|首尔|韩|韓)`https://www.gstatic.com/generate_204`60`lazy
+custom_proxy_group=netflix自选`select`(?i)(?=.*0\.[1-9]x)(?!emby)(NF|奈飞|解锁|Netflix)
 ; 设置分组标志位
 
 enable_rule_generator=true
