--- a/share_remote_config2.ini
+++ b/share_remote_config2.ini
@@ -21,6 +21,7 @@ ruleset=netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/r
 ruleset=国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=默认选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Proxy/Proxy.list
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
+ruleset=DIRECT,[]DOMAIN,ai.immersivetranslate.com
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=漏网之鱼,[]FINAL
 ; 设置规则标志位
