--- a/share_remote_config2.ini
+++ b/share_remote_config2.ini
@@ -35,7 +35,7 @@ custom_proxy_group=youtobe`select`[]默认选择`[]香港`[]新加坡`[]台湾`[
 custom_proxy_group=netflix`select`[]netflix自选`[]默认选择`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=国外媒体`select`[]默认选择`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]DIRECT
 ; custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本
-custom_proxy_group=GoogleFCM`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
+custom_proxy_group=GoogleFCM`select`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=微软服务`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
 custom_proxy_group=游戏平台`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
 custom_proxy_group=漏网之鱼`select`[]默认选择`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
