--- a/share_remote_config2.ini
+++ b/share_remote_config2.ini
@@ -28,7 +28,7 @@ ruleset=漏网之鱼,[]FINAL
 
 ; 设置分组标志位
 custom_proxy_group=默认选择`fallback`[]香港`[]新加坡`[]日本`https://www.gstatic.com/generate_204`60
-custom_proxy_group=AI`select`[]默认选择`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=AI`select`[]新加坡`[]默认选择`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=tiktok`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=telegram`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=youtobe`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
